; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_colours.c_UpdateModeDependentPointers.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_colours.c_UpdateModeDependentPointers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Atari800_TV_NTSC = common dso_local global i32 0, align 4
@COLOURS_NTSC_setup = common dso_local global i32 0, align 4
@Colours_setup = common dso_local global i32* null, align 8
@COLOURS_NTSC_external = common dso_local global i32 0, align 4
@Colours_external = common dso_local global i32* null, align 8
@Atari800_TV_PAL = common dso_local global i32 0, align 4
@COLOURS_PAL_setup = common dso_local global i32 0, align 4
@COLOURS_PAL_external = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"Interal error: Invalid Atari800_tv_mode\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @UpdateModeDependentPointers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @UpdateModeDependentPointers(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @Atari800_TV_NTSC, align 4
  %5 = icmp eq i32 %3, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32* @COLOURS_NTSC_setup, i32** @Colours_setup, align 8
  store i32* @COLOURS_NTSC_external, i32** @Colours_external, align 8
  br label %17

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @Atari800_TV_PAL, align 4
  %10 = icmp eq i32 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %7
  store i32* @COLOURS_PAL_setup, i32** @Colours_setup, align 8
  store i32* @COLOURS_PAL_external, i32** @Colours_external, align 8
  br label %16

12:                                               ; preds = %7
  %13 = call i32 (...) @Atari800_ErrExit()
  %14 = call i32 @Log_print(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %15 = call i32 @exit(i32 1) #3
  unreachable

16:                                               ; preds = %11
  br label %17

17:                                               ; preds = %16, %6
  ret void
}

declare dso_local i32 @Atari800_ErrExit(...) #1

declare dso_local i32 @Log_print(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
